--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <h1>📢 Srs. Condôminos!</h1>
     <h3>Obrigatório e imprescindível a leitura do regulamento interno</h3>
-    <h4>Regulamento interno <a href="REGULAMENTO INTERNO REGISTRADO.pdf" target="_blank">Clique aqui</a></h4>
+    <h4>Regulamento interno <a href="regulamento-interno.pdf" target="_blank">Clique aqui</a></h4>
 
     <h3>Se atentem às regras deste grupo, criado para troca de informações úteis, ideias construtivas e auxílio mútuo
         entre os moradores. Essas regras entrarão em vigor a partir deste comunicado.</h3>
