--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
             max-width: 90vw;
             padding: 20px;
             box-sizing: border-box;
+            text-align: center; /* Centraliza todo o conteúdo */
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            width: 200px; /* Ajuste o tamanho conforme necessário */
+            display: block;
+            margin: 0 auto 15px; /* Centraliza e adiciona espaço abaixo */
         }
 
         h1 {
             font-size: 1.8em;
-            text-align: center;
         }
 
         h3 {
@@ -26,6 +34,7 @@
 
         ol {
             padding-left: 20px;
+            text-align: left; /* Mantém as listas alinhadas à esquerda */
         }
 
         hr {
@@ -39,6 +48,10 @@
 </head>
 
 <body>
+
+    <!-- Adicionando a logo -->
+    <img src="logo-villagio-jaguari2.png" alt="Logo Villagio Jaguari">
+
     <h1>📢 Srs. Condôminos!</h1>
     <h3>Obrigatório e imprescindível a leitura do regulamento interno</h3>
     <h4>Regulamento interno <a href="regulamento-interno.pdf" target="_blank">Clique aqui</a></h4>
@@ -70,8 +83,8 @@
 
     <hr>
 
-    <p style="text-align: center;">📌 Lembre-se: O grupo foi criado para facilitar a convivência, e não para gerar conflitos. O bom senso e o respeito devem prevalecer sempre!</p>
+    <p>📌 Lembre-se: O grupo foi criado para facilitar a convivência, e não para gerar conflitos. O bom senso e o respeito devem prevalecer sempre!</p>
+
 </body>
 
 </html>
-
